@@ -4,11 +4,8 @@ import com.google.common.collect.*;
 import com.google.inject.Inject;
 import it.unibz.inf.ontop.exception.MinorOntopInternalBugException;
 import it.unibz.inf.ontop.injection.CoreSingletons;
-import it.unibz.inf.ontop.injection.IntermediateQueryFactory;
 import it.unibz.inf.ontop.iq.IQTree;
 import it.unibz.inf.ontop.iq.IQTreeCache;
-import it.unibz.inf.ontop.iq.UnaryIQTree;
-import it.unibz.inf.ontop.iq.impl.IQTreeTools;
 import it.unibz.inf.ontop.iq.node.*;
 import it.unibz.inf.ontop.iq.node.normalization.AggregationNormalizer;
 import it.unibz.inf.ontop.iq.node.normalization.NotRequiredVariableRemover;
@@ -16,33 +13,26 @@ import it.unibz.inf.ontop.model.term.*;
 import it.unibz.inf.ontop.model.term.functionsymbol.AggregationFunctionSymbol;
 import it.unibz.inf.ontop.model.term.functionsymbol.FunctionSymbol;
 import it.unibz.inf.ontop.substitution.Substitution;
-import it.unibz.inf.ontop.substitution.SubstitutionFactory;
 import it.unibz.inf.ontop.utils.ImmutableCollectors;
 import it.unibz.inf.ontop.utils.VariableGenerator;
 
-import javax.annotation.Nullable;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
+
+import static it.unibz.inf.ontop.iq.impl.UnaryIQTreeTools.UnaryIQTreeDecomposition;
+import static it.unibz.inf.ontop.iq.impl.UnaryIQTreeTools.UnaryOperatorSequence;
 
 public class AggregationNormalizerImpl implements AggregationNormalizer {
 
     private final CoreSingletons coreSingletons;
-    private final IntermediateQueryFactory iqFactory;
     private final TermFactory termFactory;
-    private final SubstitutionFactory substitutionFactory;
     private final NotRequiredVariableRemover notRequiredVariableRemover;
-    private final IQTreeTools iqTreeTools;
 
     @Inject
-    protected AggregationNormalizerImpl(CoreSingletons coreSingletons,  IQTreeTools iqTreeTools,
+    protected AggregationNormalizerImpl(CoreSingletons coreSingletons,
                                         NotRequiredVariableRemover notRequiredVariableRemover) {
         this.coreSingletons = coreSingletons;
-        this.iqFactory = coreSingletons.getIQFactory();
         this.termFactory = coreSingletons.getTermFactory();
-        this.substitutionFactory = coreSingletons.getSubstitutionFactory();
-        this.iqTreeTools = iqTreeTools;
         this.notRequiredVariableRemover = notRequiredVariableRemover;
     }
 
@@ -55,264 +45,246 @@ public class AggregationNormalizerImpl implements AggregationNormalizer {
     @Override
     public IQTree normalizeForOptimization(AggregationNode aggregationNode, IQTree child,
                                            VariableGenerator variableGenerator, IQTreeCache treeCache) {
-        IQTreeCache normalizedTreeCache = treeCache.declareAsNormalizedForOptimizationWithEffect();
-
-        if (aggregationNode.getGroupingVariables().isEmpty() && aggregationNode.getSubstitution().isEmpty()) {
-            return iqFactory.createTrueNode();
-        }
-        else if (aggregationNode.getSubstitution().isEmpty()) {
-            IQTree newTree = iqFactory.createUnaryIQTree(iqFactory.createDistinctNode(),
-                    iqFactory.createUnaryIQTree(iqFactory.createConstructionNode(
-                            aggregationNode.getGroupingVariables()),
-                            child));
-
-            return newTree.normalizeForOptimization(variableGenerator);
-        }
-
-        IQTree shrunkChild = notRequiredVariableRemover.optimize(child.normalizeForOptimization(variableGenerator),
-                aggregationNode.getLocallyRequiredVariables(), variableGenerator);
-
-        if (shrunkChild.isDeclaredAsEmpty()) {
-            return normalizeEmptyChild(aggregationNode, normalizedTreeCache);
-        }
-
-        QueryNode rootNode = shrunkChild.getRootNode();
-
-        // State after lifting the bindings
-        AggregationNormalizationState stateAfterLiftingBindings = Optional.of(rootNode)
-                .filter(n -> n instanceof ConstructionNode)
-                .map(n -> (ConstructionNode) n)
-                .map(n -> normalizeWithChildConstructionNode(aggregationNode, n,
-                        ((UnaryIQTree) shrunkChild).getChild(), variableGenerator))
-                .orElseGet(() -> new AggregationNormalizationState(aggregationNode, null,
-                        shrunkChild, variableGenerator, null));
-
-        AggregationNormalizationState finalState = stateAfterLiftingBindings.simplifyAggregationSubstitution();
-        // TODO: consider filters
-
-        return finalState.createNormalizedTree(normalizedTreeCache);
+        Context context = new Context(aggregationNode.getVariables(), variableGenerator, treeCache);
+        return context.normalize(aggregationNode, child);
     }
 
-    /**
-     * If the child is empty, returns no tuple if there are some grouping variables.
-     * Otherwise, returns a single tuple.
-     */
-    private IQTree normalizeEmptyChild(AggregationNode aggregationNode, IQTreeCache normalizedTreeCache) {
-        ImmutableSet<Variable> projectedVariables = aggregationNode.getVariables();
+    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
+    private static class AggregationSubTree {
+        private final Optional<FilterNode> sampleFilter;
 
-        if (!aggregationNode.getGroupingVariables().isEmpty())
-            return iqFactory.createEmptyNode(projectedVariables);
+        private final AggregationNode aggregationNode;
 
-        Substitution<ImmutableTerm> newSubstitution = aggregationNode.getSubstitution()
-                .transform(this::simplifyEmptyAggregate);
+        private final IQTree child;
 
-        return iqFactory.createUnaryIQTree(iqFactory.createConstructionNode(projectedVariables, newSubstitution),
-                iqFactory.createTrueNode(), normalizedTreeCache);
-    }
-
-    private ImmutableTerm simplifyEmptyAggregate(ImmutableFunctionalTerm aggregateTerm) {
-        FunctionSymbol functionSymbol = aggregateTerm.getFunctionSymbol();
-        if (functionSymbol instanceof AggregationFunctionSymbol) {
-            return ((AggregationFunctionSymbol) functionSymbol).evaluateEmptyBag(termFactory);
+        AggregationSubTree(Optional<FilterNode> sampleFilter, AggregationNode aggregationNode, IQTree child) {
+            this.sampleFilter = sampleFilter;
+            this.aggregationNode = aggregationNode;
+            this.child = child;
         }
-        throw new MinorOntopInternalBugException("Was expecting an AggregationFunctionSymbol");
+
+        Optional<FilterNode> sampleFilter() {
+            return sampleFilter;
+        }
+
+        ImmutableSet<Variable> groupingVariables() {
+            return aggregationNode.getGroupingVariables();
+        }
+
+        Substitution<ImmutableFunctionalTerm> aggregationSubstitution() {
+            return aggregationNode.getSubstitution();
+        }
+
+        AggregationNode aggregationNode() {
+            return aggregationNode;
+        }
+
+        IQTree child() {
+            return child;
+        }
+
+        static AggregationSubTree of(AggregationNode aggregationNode, IQTree child) {
+            return new AggregationSubTree(Optional.empty(), aggregationNode, child);
+        }
+
+        AggregationSubTree replace(AggregationNode aggregationNode, IQTree child) {
+            return new AggregationSubTree(this.sampleFilter, aggregationNode, child);
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (o instanceof AggregationSubTree) {
+                AggregationSubTree other = (AggregationSubTree) o;
+                return sampleFilter.equals(other.sampleFilter)
+                        && aggregationNode.equals(other.aggregationNode)
+                        && child.equals(other.child);
+            }
+            return false;
+        }
     }
 
-    private AggregationNormalizationState normalizeWithChildConstructionNode(AggregationNode aggregationNode,
-                                                                             ConstructionNode childConstructionNode,
-                                                                             IQTree grandChild,
-                                                                             VariableGenerator variableGenerator) {
-        return new AggregationNormalizationState(aggregationNode, childConstructionNode, grandChild, variableGenerator, null)
-                .propagateNonGroupingBindingsIntoToAggregationSubstitution()
-                .liftGroupingBindings()
-                .simplifyAggregationSubstitution();
-    }
-
-
-    protected class AggregationNormalizationState {
+    private class Context extends InjectiveBindingLiftContext {
 
         private static final int MAX_ITERATIONS = 1000;
-        private final ImmutableSet<Variable> groupingVariables;
-        // NB: may not be always normalized (e.g. not starting with aggregation functional terms)
-        private final Substitution<ImmutableFunctionalTerm> aggregationSubstitution;
 
-        @Nullable
-        private final FilterNode sampleFilter;
-        @Nullable
-        private final ConstructionNode childConstructionNode;
-        private final IQTree grandChild;
-        private final VariableGenerator variableGenerator;
-        // The oldest ancestor is first
-        private final ImmutableList<ConstructionNode> ancestors;
-
-        /**
-         * Initial state
-         */
-        private AggregationNormalizationState(AggregationNode aggregationNode, @Nullable ConstructionNode childConstructionNode,
-                                                IQTree grandChild, VariableGenerator variableGenerator,
-                                                @Nullable FilterNode sampleFilter) {
-
-            this(ImmutableList.of(),  aggregationNode.getGroupingVariables(), aggregationNode.getSubstitution(),
-                    childConstructionNode, grandChild, variableGenerator, sampleFilter);
+        Context(ImmutableSet<Variable> projectedVariables, VariableGenerator variableGenerator, IQTreeCache treeCache) {
+            super(projectedVariables, variableGenerator, coreSingletons, treeCache);
         }
 
-        private AggregationNormalizationState(ImmutableList<ConstructionNode> ancestors,
-                                              ImmutableSet<Variable> groupingVariables,
-                                              Substitution<ImmutableFunctionalTerm> aggregationSubstitution,
-                                              @Nullable ConstructionNode childConstructionNode,
-                                              IQTree grandChild, VariableGenerator variableGenerator,
-                                              @Nullable FilterNode sampleFilter) {
-            this.ancestors = ancestors;
-            this.groupingVariables = groupingVariables;
-            this.aggregationSubstitution = aggregationSubstitution;
-            this.childConstructionNode = childConstructionNode;
-            this.grandChild = grandChild;
-            this.variableGenerator = variableGenerator;
-            this.sampleFilter = sampleFilter;
+        IQTree removeNonRequiredVariables(AggregationNode aggregationNode, IQTree tree) {
+            return notRequiredVariableRemover.optimize(tree, aggregationNode.getChildVariables(), variableGenerator);
+        }
+
+        IQTree normalize(AggregationNode aggregationNode, IQTree child) {
+            if (aggregationNode.getSubstitution().isEmpty()) {
+                if (aggregationNode.getGroupingVariables().isEmpty())
+                    return iqFactory.createTrueNode();
+
+                return normalizeSubTreeRecursively(
+                        iqTreeTools.unaryIQTreeBuilder()
+                                .append(iqFactory.createDistinctNode())
+                                .append(iqFactory.createConstructionNode(aggregationNode.getVariables()))
+                                .build(child));
+            }
+
+            IQTree shrunkChild = removeNonRequiredVariables(aggregationNode,
+                    normalizeSubTreeRecursively(child));
+
+            if (shrunkChild.isDeclaredAsEmpty()) {
+                if (!aggregationNode.getGroupingVariables().isEmpty())
+                    return createEmptyNode();
+
+                Substitution<ImmutableTerm> newSubstitution = aggregationNode.getSubstitution()
+                        .transform(this::simplifyAggregateOnEmptyBag);
+
+                return iqFactory.createUnaryIQTree(
+                        iqFactory.createConstructionNode(aggregationNode.getVariables(), newSubstitution),
+                        iqFactory.createTrueNode(),
+                        getNormalizedTreeCache(true));
+            }
+
+            var initial = State.<ConstructionNode, AggregationSubTree>initial(AggregationSubTree.of(aggregationNode, shrunkChild));
+
+            var finalState =
+                    simplifyAggregationSubstitution(
+                            liftGroupingBindings(
+                                    propagateNonGroupingBindingsIntoAggregationSubstitution(
+                                            initial)));
+
+            // TODO: consider filters
+            return asIQTree(finalState);
+        }
+
+        private ImmutableTerm simplifyAggregateOnEmptyBag(ImmutableFunctionalTerm aggregateTerm) {
+            FunctionSymbol functionSymbol = aggregateTerm.getFunctionSymbol();
+            if (functionSymbol instanceof AggregationFunctionSymbol) {
+                return ((AggregationFunctionSymbol) functionSymbol).evaluateEmptyBag(termFactory);
+            }
+            throw new MinorOntopInternalBugException("Was expecting an AggregationFunctionSymbol");
         }
 
         /**
          * All the bindings of non-grouping variables in the child construction node are propagated to
          * the aggregation substitution
          */
-        public AggregationNormalizationState propagateNonGroupingBindingsIntoToAggregationSubstitution() {
-            if (childConstructionNode == null)
-                return this;
+        State<ConstructionNode, AggregationSubTree> propagateNonGroupingBindingsIntoAggregationSubstitution(State<ConstructionNode, AggregationSubTree> state) {
+            AggregationSubTree subTree = state.getSubTree();
+            var construction = UnaryIQTreeDecomposition.of(subTree.child(), ConstructionNode.class);
+            if (!construction.isPresent())
+                return state;
 
-            // NB: non grouping variables that are USED by the aggregation node (we can safely ignore the non-used ones)
-            Set<Variable> nonGroupingVariables = Sets.difference(
-                    iqTreeTools.extractChildVariables(groupingVariables, aggregationSubstitution),
-                    groupingVariables);
+            Substitution<ImmutableTerm> substitution = construction.getNode().getSubstitution();
 
-            Substitution<ImmutableTerm> nonGroupingSubstitution = childConstructionNode.getSubstitution()
-                    .restrictDomainTo(nonGroupingVariables);
+            AggregationNode aggregationNode = subTree.aggregationNode();
+            ImmutableSet<Variable> groupingVariables = aggregationNode.getGroupingVariables();
 
-            Substitution<ImmutableFunctionalTerm> newAggregationSubstitution =
-                            nonGroupingSubstitution.compose(aggregationSubstitution).builder()
-                                    .restrictDomainTo(aggregationSubstitution.getDomain())
-                                    .transform(t -> (ImmutableFunctionalTerm)t)
-                                    .build();
+            // NB: non-grouping variables that are USED by the aggregation node (we can safely ignore the non-used ones)
+            Substitution<ImmutableTerm> nonGroupingSubstitution = substitution.restrictDomainTo(
+                    Sets.difference(aggregationNode.getChildVariables(), groupingVariables));
 
             AggregationNode newAggregationNode = iqFactory.createAggregationNode(
                     groupingVariables,
-                    newAggregationSubstitution);
+                    applySubstitution(nonGroupingSubstitution, aggregationNode.getSubstitution()));
 
-            // Nullable
-            ConstructionNode newChildConstructionNode = Optional.of(childConstructionNode.getSubstitution().restrictDomainTo(groupingVariables))
-                    .filter(s -> !s.isEmpty())
-                    .map(s -> iqFactory.createConstructionNode(newAggregationNode.getChildVariables(), s))
-                    .orElse(null);
+            IQTree newChild = iqTreeTools.unaryIQTreeBuilder()
+                    .append(iqTreeTools.createOptionalConstructionNode(
+                            newAggregationNode::getChildVariables,
+                            substitution.restrictDomainTo(groupingVariables)))
+                    .build(construction.getChild());
 
-            return new AggregationNormalizationState(ancestors, groupingVariables, newAggregationSubstitution,
-                    newChildConstructionNode, grandChild, variableGenerator, sampleFilter);
+            return state.replace(subTree.replace(newAggregationNode, newChild));
+        }
+
+        private Substitution<ImmutableFunctionalTerm> applySubstitution(Substitution<ImmutableTerm> substitution,  Substitution<ImmutableFunctionalTerm> aggregation) {
+            return substitution.compose(aggregation).builder()
+                    .restrictDomainTo(aggregation.getDomain())
+                    .transform(t -> (ImmutableFunctionalTerm) t)
+                    .build();
         }
 
         /**
          * Lifts (fragments of) bindings that are injective.
-         *
+         * <p>
          * propagateNonGroupingBindingsIntoToAggregationSubstitution() is expected to have been called before
-         *
          */
-        public AggregationNormalizationState liftGroupingBindings() {
-            if (childConstructionNode == null)
-                return this;
+        State<ConstructionNode, AggregationSubTree> liftGroupingBindings(State<ConstructionNode, AggregationSubTree> state) {
+            AggregationSubTree subTree = state.getSubTree();
+            var construction = UnaryIQTreeDecomposition.of(subTree.child(), ConstructionNode.class);
+            if (!construction.isPresent())
+                return state;
 
-            Substitution<ImmutableTerm> substitution = childConstructionNode.getSubstitution();
+            Substitution<ImmutableTerm> substitution = construction.getNode().getSubstitution();
             if (substitution.isEmpty())
-                return this;
+                return state;
 
-            if (!groupingVariables.containsAll(substitution.getDomain()))
+            if (!subTree.groupingVariables().containsAll(substitution.getDomain()))
                 throw new MinorOntopInternalBugException("Was expecting all the non-grouping bindings to be lifted");
-
 
             // Only projecting grouping variables
             // (mimicking the special case when GROUP BY reduces itself to a DISTINCT and a projection)
-            ConstructionNode groupingConstructionNode = iqFactory.createConstructionNode(groupingVariables, substitution);
+            ConstructionNode groupingConstructionNode = iqFactory.createConstructionNode(subTree.groupingVariables(), substitution);
 
-            // Non-final
-            InjectiveBindingLiftState subState = new InjectiveBindingLiftState(groupingConstructionNode, grandChild,
-                    variableGenerator, coreSingletons);
+            State<ConstructionNode, UnarySubTree<ConstructionNode>> subState =
+                    State.<ConstructionNode, UnarySubTree<ConstructionNode>>initial(
+                            UnarySubTree.of(groupingConstructionNode, construction.getChild()))
+                            .reachFinal(MAX_ITERATIONS, this::liftBindings);
 
-            for (int i = 0; i < MAX_ITERATIONS; i++) {
-                InjectiveBindingLiftState newSubState = subState.liftBindings();
-
-                // Convergence
-                if (newSubState.equals(subState)) {
-                    return convertIntoState(subState);
-                }
-                else
-                    subState = newSubState;
-            }
-            throw new MinorOntopInternalBugException("AggregationNormalizerImpl.liftGroupingBindings() " +
-                    "did not converge after " + MAX_ITERATIONS);
-        }
-
-        private AggregationNormalizationState convertIntoState(InjectiveBindingLiftState subState) {
-
-            ImmutableList<ConstructionNode> subStateAncestors = subState.getAncestors();
-
-            ImmutableList<ConstructionNode> newAncestors = Stream.concat(
-                    // Already defined
-                    ancestors.stream(),
+            UnaryOperatorSequence<ConstructionNode> newAncestors = state.getAncestors().append(
                     // Ancestors of the sub-state modified so as to project the aggregation variables
-                    subStateAncestors.stream()
+                    subState.getAncestors().stream()
                             .map(a -> iqFactory.createConstructionNode(
-                                    Sets.union(a.getVariables(), aggregationSubstitution.getDomain()).immutableCopy(),
-                                    a.getSubstitution())))
-                    .collect(ImmutableCollectors.toList());
+                                    Sets.union(a.getVariables(), subTree.aggregationSubstitution().getDomain()).immutableCopy(),
+                                    a.getSubstitution())));
 
             // Applies all the substitutions of the ancestors to the substitution of the aggregation node
             // Needed when some grouping variables are also used in the aggregates
-            Substitution<ImmutableFunctionalTerm> newAggregationSubstitution = subStateAncestors.stream()
-                    .reduce(aggregationSubstitution,
-                            (s, a) -> a.getSubstitution()
-                                            .compose(s)
-                                            .builder()
-                                            .restrictDomainTo(aggregationSubstitution.getDomain())
-                                            .transform(t -> (ImmutableFunctionalTerm)t)
-                                            .build(),
+            Substitution<ImmutableFunctionalTerm> newAggregationSubstitution = subState.getAncestors().stream()
+                    .map(ConstructionNode::getSubstitution)
+                    .reduce(subTree.aggregationSubstitution(),
+                            (s, a) -> applySubstitution(a, s),
                             (s1, s2) -> {
                                 throw new MinorOntopInternalBugException("Substitution merging was not expected");
                             });
 
             // The closest parent informs us about the new grouping variables
-            ImmutableSet<Variable> newGroupingVariables = subStateAncestors.isEmpty()
-                    ? groupingVariables
+            ImmutableSet<Variable> newGroupingVariables = subState.getAncestors().isEmpty()
+                    ? subTree.groupingVariables()
                     : Sets.difference(
-                            subStateAncestors.get(subStateAncestors.size() - 1).getChildVariables(),
+                            subState.getAncestors().getLast().getChildVariables(),
                             newAggregationSubstitution.getDomain())
                     .immutableCopy();
 
-            Optional<Variable> sampleVariable = newGroupingVariables.isEmpty() && !groupingVariables.isEmpty()
+            Optional<Variable> sampleVariable = newGroupingVariables.isEmpty() && !subTree.groupingVariables().isEmpty()
                     ? Optional.of(variableGenerator.generateNewVariable("aggv"))
                     : Optional.empty();
 
-            Substitution<ImmutableFunctionalTerm> finalAggregationSubstitution = sampleVariable.map(
-                    s -> newAggregationSubstitution.compose(
-                            substitutionFactory.getSubstitution(sampleVariable.get(),
-                                    termFactory.getDBSample(termFactory.getDBIntegerConstant(1),
-                                            termFactory.getTypeFactory().getDBTypeFactory().getDBLargeIntegerType())))
-                            .builder()
-                            .transform(t -> (ImmutableFunctionalTerm)t)
-                            .build()
-            ).orElse(newAggregationSubstitution);
+            Substitution<ImmutableFunctionalTerm> finalAggregationSubstitution =
+                    substitutionFactory.union(newAggregationSubstitution, getSampleSubstitution(sampleVariable));
 
-            // Nullable
-            // Is created if, either, the node includes a substitution, or a sample variable is required.
-            ConstructionNode newChildConstructionNode = subState.getChildConstructionNode()
-                    // Only keeps the child construction node if it has a substitution
-                    .filter(n -> !n.getSubstitution().isEmpty())
-                    .map(n -> iqFactory.createConstructionNode(
-                            iqTreeTools.extractChildVariables(newGroupingVariables, finalAggregationSubstitution),
-                            n.getSubstitution()))
-                    .orElse(null);
+            AggregationNode newAggregationNode = iqFactory.createAggregationNode(newGroupingVariables, finalAggregationSubstitution);
 
             // Creates a filter over the sample variable so that only rows that have a non-null value in it are kept.
-            Optional<FilterNode> newFilter = sampleVariable.map(s -> iqFactory.createFilterNode(termFactory.getDBIsNotNull(s)));
+            Optional<FilterNode> newFilter = sampleVariable.map(v -> iqFactory.createFilterNode(termFactory.getDBIsNotNull(v)));
 
-            return new AggregationNormalizationState(newAncestors, newGroupingVariables, finalAggregationSubstitution,
-                    newChildConstructionNode,
-                    subState.getGrandChildTree(), variableGenerator, newFilter.orElse(null));
+            // Is created if, either, the node includes a substitution, or a sample variable is required.
+            IQTree newChild = iqTreeTools.unaryIQTreeBuilder()
+                    .append(subState.getSubTree().getOptionalNode()
+                            // Only keeps the child construction node if it has a substitution
+                            .flatMap(n -> iqTreeTools.createOptionalConstructionNode(
+                                    newAggregationNode::getChildVariables,
+                                    n.getSubstitution())))
+                    .build(construction.getChild());
+
+            return new State<>(newAncestors, new AggregationSubTree(newFilter, newAggregationNode, newChild));
+        }
+
+        @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
+        Substitution<ImmutableFunctionalTerm> getSampleSubstitution(Optional<Variable> optionalVariable) {
+            return optionalVariable.map(v -> substitutionFactory.getSubstitution(
+                            v,
+                            termFactory.getDBSample(termFactory.getDBIntegerConstant(1),
+                                    termFactory.getTypeFactory().getDBTypeFactory().getDBLargeIntegerType())))
+                    .orElseGet(substitutionFactory::getSubstitution);
         }
 
         /**
@@ -320,63 +292,57 @@ public class AggregationNormalizerImpl implements AggregationNormalizer {
          * so as to guarantee that all the values of the substitution are functional terms using
          * an aggregation function symbol.
          */
-        public AggregationNormalizationState simplifyAggregationSubstitution() {
+        State<ConstructionNode, AggregationSubTree> simplifyAggregationSubstitution(State<ConstructionNode, AggregationSubTree> state) {
+            AggregationSubTree subTree = state.getSubTree();
             // NB: use ImmutableSubstitution.simplifyValues()
-            // NB: look at FunctionSymbol.isAggregation()
+            // NB: look at FunctionSymbol.isAggregation()
 
-            // Taken from the child sub-tree
-            VariableNullability variableNullability = iqTreeTools.createOptionalUnaryIQTree(Optional.ofNullable(childConstructionNode), grandChild)
-                    .getVariableNullability();
+            VariableNullability variableNullability = subTree.child().getVariableNullability();
 
             // The simplification may do the "lifting" inside the functional term (having a non-aggregation
             // functional term above the aggregation one)
-            Substitution<ImmutableTerm> simplifiedSubstitution = aggregationSubstitution
+            Substitution<ImmutableTerm> simplifiedSubstitution = subTree.aggregationSubstitution()
                     .transform(t -> t.simplify(variableNullability));
 
-            ImmutableMap<Variable, ImmutableFunctionalTerm.FunctionalTermDecomposition> decompositionMap =
-                    simplifiedSubstitution.builder()
-                            .restrictRangeTo(ImmutableFunctionalTerm.class)
-                            .toMapIgnoreOptional((v, t) -> decomposeFunctionalTerm(t));
+            SubstitutionSplitter decomposition = new SubstitutionSplitter(simplifiedSubstitution, this::decomposeFunctionalTerm);
+            Substitution<ImmutableTerm> liftedSubstitution = decomposition.getLiftedSubstitution();
+            Substitution<ImmutableFunctionalTerm> newAggregationSubstitution = decomposition.getNonLiftedSubstitution();
 
-            Substitution<ImmutableTerm> liftedSubstitution = substitutionFactory.union(
-                    // All variables and constants
-                    simplifiedSubstitution.<ImmutableTerm>restrictRangeTo(NonFunctionalTerm.class),
-                    // (Possibly decomposed) functional terms
-                    simplifiedSubstitution.builder()
-                            .<ImmutableTerm>restrictRangeTo(ImmutableFunctionalTerm.class)
-                            .transformOrRemove(decompositionMap::get, ImmutableFunctionalTerm.FunctionalTermDecomposition::getLiftableTerm)
-                            .build());
-
-            Substitution<ImmutableFunctionalTerm> newAggregationSubstitution = simplifiedSubstitution.builder()
-                    .restrictRangeTo(ImmutableFunctionalTerm.class)
-                    .flatTransform(decompositionMap::get, ImmutableFunctionalTerm.FunctionalTermDecomposition::getSubstitution)
-                    .build();
-
-            if (liftedSubstitution.isEmpty())
-                return new AggregationNormalizationState(
-                        ancestors,
-                        groupingVariables, newAggregationSubstitution,
-                        childConstructionNode, grandChild, variableGenerator, sampleFilter);
+            if (liftedSubstitution.isEmpty()) {
+                AggregationNode newAggregationNode = iqFactory.createAggregationNode(subTree.groupingVariables(), newAggregationSubstitution);
+                return state.replace(subTree.replace(newAggregationNode, subTree.child()));
+            }
 
             ConstructionNode liftedConstructionNode = iqFactory.createConstructionNode(
-                    Sets.union(groupingVariables, aggregationSubstitution.getDomain()).immutableCopy(),
-                   liftedSubstitution);
+                    subTree.aggregationNode().getVariables(),
+                    liftedSubstitution);
 
-            ImmutableSet<Variable> newGroupingVariables = Sets.difference(liftedConstructionNode.getChildVariables(),
+            // so that newAggregationNode.getVariables() coincides with liftedConstructionNode.getChildVariables()
+            ImmutableSet<Variable> newGroupingVariables = Sets.difference(
+                    liftedConstructionNode.getChildVariables(),
                     newAggregationSubstitution.getDomain()).immutableCopy();
 
-            ImmutableList<ConstructionNode> newAncestors = Stream.concat(ancestors.stream(), Stream.of(liftedConstructionNode))
-                            .collect(ImmutableCollectors.toList());
-
-            return new AggregationNormalizationState(newAncestors, newGroupingVariables, newAggregationSubstitution,
-                    childConstructionNode, grandChild, variableGenerator, sampleFilter);
+            AggregationNode newAggregationNode = iqFactory.createAggregationNode(newGroupingVariables, newAggregationSubstitution);
+            return state.lift(liftedConstructionNode, subTree.replace(newAggregationNode, subTree.child()));
         }
+
+        IQTree asIQTree(State<ConstructionNode, AggregationSubTree> state) {
+            AggregationSubTree subTree = state.getSubTree();
+            // Recursive (for merging top construction nodes)
+            return normalizeSubTreeRecursively(
+                    iqTreeTools.unaryIQTreeBuilder()
+                            .append(state.getAncestors())
+                            .append(subTree.sampleFilter())
+                            .append(subTree.aggregationNode(), getNormalizedTreeCache(true))
+                            .build(subTree.child())); // from shrunk child - normalized?
+        }
+
 
         /**
          * Decomposes functional terms so as to lift non-aggregation function symbols above and block
          * the aggregation functional terms
          */
-        protected Optional<ImmutableFunctionalTerm.FunctionalTermDecomposition> decomposeFunctionalTerm(
+        private Optional<ImmutableFunctionalTerm.FunctionalTermDecomposition> decomposeFunctionalTerm(
                 ImmutableFunctionalTerm functionalTerm) {
 
             FunctionSymbol functionSymbol = functionalTerm.getFunctionSymbol();
@@ -389,12 +355,12 @@ public class AggregationNormalizerImpl implements AggregationNormalizer {
             // One entry per functional sub-term
             ImmutableMap<Integer, ImmutableFunctionalTerm.FunctionalTermDecomposition> subTermDecompositions =
                     IntStream.range(0, arguments.size())
-                    .filter(i -> arguments.get(i) instanceof ImmutableFunctionalTerm)
-                    .boxed()
-                    .collect(ImmutableCollectors.toMap(
-                            i -> i,
-                            // Recursive
-                            i -> getFunctionalTermDecomposition((ImmutableFunctionalTerm) arguments.get(i))));
+                            .filter(i -> arguments.get(i) instanceof ImmutableFunctionalTerm)
+                            .boxed()
+                            .collect(ImmutableCollectors.toMap(
+                                    i -> i,
+                                    // Recursive
+                                    i -> getFunctionalTermDecomposition((ImmutableFunctionalTerm) arguments.get(i))));
 
             ImmutableList<ImmutableTerm> newArguments = IntStream.range(0, arguments.size())
                     .mapToObj(i -> Optional.ofNullable(subTermDecompositions.get(i))
@@ -412,27 +378,12 @@ public class AggregationNormalizerImpl implements AggregationNormalizer {
             return Optional.of(termFactory.getFunctionalTermDecomposition(newFunctionalTerm, subTermSubstitution));
         }
 
-        private ImmutableFunctionalTerm.FunctionalTermDecomposition getFunctionalTermDecomposition(ImmutableFunctionalTerm arg)  {
+        private ImmutableFunctionalTerm.FunctionalTermDecomposition getFunctionalTermDecomposition(ImmutableFunctionalTerm arg) {
             return decomposeFunctionalTerm(arg)
                     .orElseGet(() -> {
                         Variable var = variableGenerator.generateNewVariable();
-                        return termFactory.getFunctionalTermDecomposition(var, substitutionFactory.getSubstitution(var, arg));});
-        }
-
-
-        protected IQTree createNormalizedTree(IQTreeCache normalizedTreeCache) {
-            IQTree newChildTree = iqTreeTools.createOptionalUnaryIQTree(Optional.ofNullable(childConstructionNode), grandChild);
-
-            AggregationNode aggregationNode = iqFactory.createAggregationNode(groupingVariables, aggregationSubstitution);
-
-            UnaryIQTree aggregationTree = iqFactory.createUnaryIQTree(aggregationNode, newChildTree, normalizedTreeCache);
-
-            IQTree baseTree = iqTreeTools.createOptionalUnaryIQTree(Optional.ofNullable(sampleFilter), aggregationTree);
-
-            return iqTreeTools.createAncestorsUnaryIQTree(ancestors.reverse(), baseTree)
-                    // Recursive (for merging top construction nodes)
-                    .normalizeForOptimization(variableGenerator);
+                        return termFactory.getFunctionalTermDecomposition(var, substitutionFactory.getSubstitution(var, arg));
+                    });
         }
     }
-
 }
